# codespaces-blank

./: .gitignore  .gitmodules  README.md
.github/workflows/: cppcheck.yml  mdlint.yml
CLI App Framework/: CMakeLists.txt  README.md
CLI App Framework/src/: CMakeLists.txt  cli_framework.c
TIFF IO Framework/: CMakeLists.txt  README.md
TIFF IO Framework/src/: CMakeLists.txt  status_reporting.h  tiff_io_framework.c
